# pvnet

./: .gitignore  LICENSE  README.md  TRUNCATION_LINEMOD.md  build_ceres.sh  build_ceres_for_docker.sh  code.html  environment.yml  index.html  model.html  requirements.txt  run.py
configs/: linemod_train.json
css/: controls.css  custom.css  frame.css  widgets.css
data/demo/: cat_bb8_3d.txt  cat_points_3d.txt  cat_pose.npy
docker/: Dockerfile  daemon.json  how-to-docker.md  launch-docker.sh
lib/datasets/: augmentation.py  default_linemod_cfg.json  linemod_dataset.py
lib/networks/: model_repository.py  resnet.py  vgg.py  vgg16_convs.py
lib/ransac_voting_gpu_layer/: ransac_voting_gpu.py  setup.py
lib/ransac_voting_gpu_layer/src/: cuda_common.h  ransac_voting.cpp  ransac_voting_kernel.cu
lib/utils/: arg_utils.py  base_utils.py  config.py  data_utils.py  draw_utils.py  evaluation_utils.py  net_utils.py  opengl_render_backend.py  render_utils.py
lib/utils/extend_utils/: Obj2Points  _extend_utils.c  _mesh_rasterization_cffi.c  build_extend_utils_cffi.py  build_extend_utils_cffi_for_docker.py  extend_utils.py
lib/utils/extend_utils/include/ceres/internal/: config.h
lib/utils/extend_utils/lib/: libceres.so.1  libceres.so.1.14.0  libceres.so.2  libceres.so.2.0.0
lib/utils/extend_utils/src/: CMakeLists.txt  farthest_point_sampling.cpp  mesh_rasterization.cpp  nearest_neighborhood.cu  post_process.cpp  uncertainty_pnp.cpp  utils_python_binding.h
tools/: demo.py  download_linemod_orig.sh  train_linemod.py
